<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="titulo_main">Especiais</string>
    <string name="subtitulo_main">Brasil</string>
    <string name="foto_descricao">Foto ilustrativa do local</string>
    <string name="resumo_pacote_descricao_imagem">Imagem ilustrativa do local</string>
    <string name="resumo_pacote_preco_final">Preço final:</string>
    <string name="resumo_pacote_button_realizar_pagamento">realizar pagamento</string>
    <string name="texto_pagamento">Digite as informações do cartão de crédito que você desaja usar para o pagamento</string>
    <string name="pagamento_valor_da_compra">Valor da compra:</string>
    <string name="pagamento_numero_cartao">Número do cartão</string>
    <string name="pagamento_cartao_credito_mes">MM</string>
    <string name="pagamento_cartao_credito_ano">AA</string>
    <string name="pagamento_cartao_nome">Nome no cartão</string>
    <string name="pagamento_botao_finalizar_compra">FINALIZAR COMPRA</string>
    <string name="pagamento_cartao_cvc">CVC</string>
</resources>